--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,40 @@
   --secondary-background-color: #f5f4fa;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: Roboto;
+}
+
+/* header */
+
+.header {
+  background-color: var(--primary-background-color);
+  outline: 2px solid tomato;
+}
+
+.header .container {
+  padding-left: 200px;
+  padding-right: 200px;
+  display: flex;
+}
+
+.header .list,
+.contact-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .nav-list {
@@ -23,16 +55,8 @@ body {
   list-style: none;
 }
 
-/* header */
-
-.page-header {
-  background-color: var(--primary-background-color);
-}
-.page-header .list,
-.contact-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.nav-list > .list:not(:last-child) {
+  padding-right: 50px;
 }
 
 .logo {
@@ -42,39 +66,50 @@ body {
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
+  padding-right: 86px;
 }
 
 .logo-accent {
   color: var(--title-text-color);
 }
 
-.page-header .link {
+.header .link {
   color: var(--title-text-color);
   text-decoration: none;
 }
 
-.page-header .link.current {
+.header .link.current {
   color: var(--primary-color);
 }
 
-.page-header .link:hover,
-.page-header .link:focus {
+.header .link:hover,
+.header .link:focus {
   color: var(--primary-color);
+}
+
+.contact-list {
+  display: flex;
 }
 
 /* hero */
 
-.title {
+.hero .title {
   font-family: Roboto;
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.4px;
+  line-height: 1.4;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.06em;
+  width: 646px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 200px;
+  margin-bottom: 46px;
 }
 
 .button.primary {
+  display: block;
   color: var(--primary-background-color);
   font-family: Roboto;
   font-weight: 700;
@@ -85,26 +120,65 @@ body {
   letter-spacing: 0.06em;
   background: #2196f3;
   border-radius: 4px;
-  padding: 10px 32px;
-  margin-left: 700px;
-  width: 140px;
-  height: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 200px;
 }
 
 /* benefits */
+
+.benefits > h2 {
+  color: transparent;
+}
+
+.benefits .container {
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+
+.benefits .list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
+}
 
 .benefits li {
   list-style: none;
 }
 
+.benefits .image {
+  background-color: var(--secondary-background-color);
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 106.34px;
+  padding-right: 106.34px;
+  border-radius: 4px;
+}
+
+.benefits .block:not(:last-child) {
+  margin-right: 30px;
+}
+
+.benefits .block {
+  width: 278px;
+}
+
 .benefits .title {
-  color: var(--primary-color);
+  color: var(--title-text-color);
   font-family: Roboto;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.2;
   text-transform: uppercase;
   text-align: left;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
 
 .benefits .subtitle {
@@ -112,13 +186,25 @@ body {
   font-family: Roboto;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.2;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
 
 /* about us */
 
 .about-us .list {
   list-style: none;
+  display: flex;
+  margin-top: 50px;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-bottom: 94px;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.about-us .block:not(:last-child) {
+  margin-right: 30px;
 }
 
 .about-us .heading {
@@ -136,16 +222,37 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.2;
+  text-align: center;
   text-transform: uppercase;
   background: rgba(47, 48, 58, 0.8);
-  width: 360px;
-  padding: 10px;
+  padding: 27px 88px;
 }
 
 /* team */
 
 .team {
   background: var(--secondary-background-color);
+}
+
+.team .container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  padding-left: 200px;
+  padding-right: 200px;
+}
+
+.team .list {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.team .image {
+  width: 278px;
+}
+
+.team .block {
+  margin-right: 30px;
 }
 
 .team .heading {
@@ -156,6 +263,12 @@ body {
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
+}
+
+.team .social-list {
+  display: flex;
+  padding: 0;
 }
 
 .team .list,
@@ -180,7 +293,8 @@ body {
 
 /* clients */
 
-.clients > .heading {
+.clients .heading {
+  color: var(--title-text-color);
   font-family: Roboto;
   font-weight: 700;
   font-size: 36px;
@@ -189,10 +303,26 @@ body {
   letter-spacing: 0.03em;
 }
 
-.clients .list {
-  list-style: none;
+.clients .container {
+  padding-top: 94px;
+  padding-right: 200px;
+  padding-left: 200px;
 }
 
+.clients .list {
+  display: flex;
+  margin-top: 50px;
+  list-style: none;
+  padding: 0;
+}
+
+.clients .brand {
+  border: 1px solid #000;
+  padding: 21px 0px;
+  margin-right: 30px;
+  border-radius: 4px;
+  width: 175px;
+}
 /* footer */
 
 .footer {
