--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,8 @@ body {
 
 .header .link.current {
   color: var(--primary-color);
+  border-bottom: 3px solid var(--primary-color);
+  padding-bottom: 29px;
 }
 
 .header .link:hover,
