--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -38,14 +38,12 @@ body {
 .header-nav {
   display: flex;
   align-items: center;
-  height: 80px;
 }
 
 .header .container {
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  justify-content: space-between;
   width: 1170px;
   padding-left: 15px;
   padding-right: 15px;
@@ -59,7 +57,9 @@ body {
 }
 
 .contact-list {
+  display: flex;
   align-items: center;
+  margin-left: auto;
 }
 
 .nav-list {
@@ -91,19 +91,22 @@ body {
 .header .link {
   color: var(--title-text-color);
   text-decoration: none;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: block;
 }
 
 .header .link.current {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--primary-color);
-  border-bottom: 3px solid var(--primary-color);
-  padding-bottom: 30px;
 }
 
 .header .link:hover,
 .header .link:focus {
   color: var(--primary-color);
-  border-bottom: 3px solid var(--primary-color);
-  padding-bottom: 30px;
 }
 
 .header .link {
@@ -131,10 +134,6 @@ body {
   color: var(--primary-color);
 }
 
-.contact-list {
-  display: flex;
-}
-
 .contact-list .list:not(:first-child) {
   margin-left: 30px;
 }
@@ -148,7 +147,6 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
-
 /* portfolio */
 .heading {
   color: transparent;
@@ -164,16 +162,17 @@ body {
   width: 1170px;
 }
 
-.portfolio .list,
-.portfolio.nav {
+.portfolio .list {
   list-style: none;
   display: flex;
   padding: 0px;
-  justify-content: center;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .portfolio.nav {
+  list-style: none;
+  display: flex;
   justify-content: center;
   padding: 0px;
   margin-bottom: 50px;
@@ -255,10 +254,6 @@ body {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
   border-radius: 5px;
-}
-
-.portfolio .box:not(:nth-child(3n)) {
-  margin-right: 30px;
 }
 
 .portfolio .box:hover,
