--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -256,6 +256,10 @@ body {
   border-radius: 5px;
 }
 
+.portfolio .box:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
 .portfolio .box:hover,
 .portfolio .box:focus {
   background: #ffffff;
