--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 :root {
   --primary-color: #2196f3;
   --title-text-color: #212121;
@@ -154,6 +148,7 @@ body {
 
 .hero {
   background-color: var(--secondary-text-color);
+  text-align: center;
 }
 
 .hero .container {
@@ -171,7 +166,6 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
-  text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.06em;
   color: var(--primary-background-color);
@@ -179,22 +173,22 @@ body {
 }
 
 .button.primary {
-  display: block;
+  display: inline-block;
+  box-sizing: border-box;
   color: var(--primary-background-color);
   font-family: Roboto;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
-  text-align: center;
   text-decoration: none;
   letter-spacing: 0.06em;
   background: #2196f3;
   border-radius: 4px;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: 200px;
+  padding-right: 32px;
+  padding-left: 32px;
+  min-width: 200px;
 }
 
 /* benefits */
@@ -438,7 +432,15 @@ body {
 }
 
 .clients .brand {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
   margin-right: 30px;
+  width: calc((100% - 150px) / 6);
+  height: 90px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
 
 .clients .brand:last-child {
