--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -167,7 +167,8 @@ body {
 .portfolio .list {
   list-style: none;
   display: flex;
-  padding: 0px;
+  padding: 0;
+  margin: 0;
   flex-wrap: wrap;
   justify-content: space-between;
 }
