--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 :root {
   --primary-color: #2196f3;
   --title-text-color: #212121;
@@ -88,7 +82,7 @@ body {
   color: var(--title-text-color);
 }
 
-.header .link {
+.header__link {
   color: var(--title-text-color);
   text-decoration: none;
   padding-top: 32px;
@@ -96,20 +90,25 @@ body {
   display: block;
 }
 
-.header .link.current {
-  display: block;
+.header__link--current {
+  color: var(--primary-color);
+  text-decoration: none;
   padding-top: 32px;
   padding-bottom: 32px;
+  display: block;
 
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.header__link:hover,
+.header__link:focus {
   color: var(--primary-color);
 }
 
-.header .link:hover,
-.header .link:focus {
-  color: var(--primary-color);
-}
-
-.header .link {
+.header__link {
   font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
@@ -118,7 +117,7 @@ body {
   color: var(--title-text-color);
 }
 
-.header .link-contact {
+.header__link-contact {
   text-decoration: none;
   font-family: Roboto;
   font-weight: 400;
@@ -131,8 +130,8 @@ body {
   padding-bottom: 32px;
 }
 
-.header .link-contact:hover,
-.header .link-contact:focus {
+.header__link-contact:hover,
+.header__link-contact:focus {
   color: var(--primary-color);
 }
 
@@ -148,6 +147,53 @@ body {
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+}
+
+/* hero */
+
+.hero {
+  background-color: var(--secondary-text-color);
+  text-align: center;
+}
+
+.hero .container {
+  width: 1170px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero .title {
+  font-family: Roboto;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  text-transform: uppercase;
+  letter-spacing: 0.06em;
+  color: var(--primary-background-color);
+  margin-bottom: 46px;
+}
+
+.button.primary {
+  display: inline-block;
+  box-sizing: border-box;
+  color: var(--primary-background-color);
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  text-decoration: none;
+  letter-spacing: 0.06em;
+  background: #2196f3;
+  border-radius: 4px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 32px;
+  padding-left: 32px;
+  min-width: 200px;
 }
 /* portfolio */
 .heading {
