--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,16 @@ body {
   color: var(--primary-color);
 }
 
+.header__link-contact::before {
+  display: inline-block;
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-image: url(../images/main/person1.png);
+  background-position: center;
+  background-size: contain;
+}
+
 .contact-list .list:not(:first-child) {
   margin-left: 30px;
 }
@@ -166,6 +176,14 @@ body {
   margin-right: auto;
 }
 
+.hero {
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url("/images/main/Header\ img.jpg");
+}
+
 .hero .title {
   font-family: Roboto;
   font-weight: 900;
@@ -187,13 +205,19 @@ body {
   line-height: 1.9;
   text-decoration: none;
   letter-spacing: 0.06em;
-  background: #2196f3;
+  background: var(--primary-color);
   border-radius: 4px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-right: 32px;
   padding-left: 32px;
   min-width: 200px;
+  transition: 0.3s;
+}
+
+.button.primary:hover {
+  background: #60b8ff;
+  transition: 0.3s;
 }
 
 /* benefits */
@@ -443,6 +467,7 @@ body {
   align-items: center;
   margin-right: 30px;
   width: calc((100% - 150px) / 6);
+
   height: 90px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
